<resources>
    <string name="app_name" translatable="false">Watch out</string>
    <string name="cast_title">Cast</string>
    <string name="now_in_theatres">In theatres</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="most_popular_series">Most Popular Series</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="awards">Awards:</string>
    <string name="height">Height:</string>
    <string name="known_for_movies">Famous Movies</string>
    <string name="home">Home</string>
    <string name="menu_search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="top250">Top 250</string>
    <string name="top_250_movies">Top 250 movies</string>
    <string name="top_250_tv_series">Top 250 Series</string>
    <string name="released_date">Released Date:</string>
    <string name="genres">Genres:</string>
    <string name="director">Director:</string>
    <string name="runtime">Runtime:</string>
    <string name="slash">/</string>
    <string name="all_films_title">All films:</string>
    <string name="my_saved_movies">My list</string>
    <string name="success_saved">Movie saved</string>
    <string name="success_deleted">Deleted from list</string>
    <string name="no_data">no data</string>
    <string name="query_hint_search_view">Search movie/TV show here</string>
    <string name="no_favourite_movies_or_tv_shows">No favourite movies or TV shows.</string>
    <string name="error">Error:</string>
    <string name="retry">Retry</string>
    <string name="no_internet_error">Check your Internet connection</string>
</resources>