<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/movieListFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/theatreFragment"
        android:icon="@drawable/ic_in_theatre"
        android:title="@string/now_in_theatres"
        app:showAsAction="always" />

    <item
        android:id="@+id/top250Fragment"
        android:icon="@drawable/ic_top250"
        android:title="@string/top250"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/savedMovieListFragment"
        android:icon="@drawable/ic_my_list"
        android:title="@string/favourite"
        app:showAsAction="always" />
</menu>